<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="result">Result</string>
    <string name="sample_conversion">e.g 50.0 EUR = 60.61 USD</string>
    <string name="convert">Convert</string>
    <string name="enter_amount">Enter Amount</string>

    <string-array name="currency_codes">
        <item>CAD</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>AUD</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>SGD</item>
        <item>PLN</item>
        <item>BGN</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>ILS</item>
        <item>GBP</item>
        <item>KRW</item>
        <item>MYR</item>
    </string-array>

    <!--<string-array name="currency_codes">

        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTC</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYN</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHF</item>
        <item>CLF</item>
        <item>CLP</item>
        <item>CNH</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CUC</item>
        <item>CUP</item>
        <item>CVE</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>ERN</item>
        <item>ETB</item>
        <item>EUR</item>
        <item>FJD</item>
        <item>FKP</item>
        <item>GBP</item>
        <item>GEL</item>
        <item>GGP</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>GTQ</item>
        <item>GYD</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>IMP</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JEP</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>JPY</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KMF</item>
        <item>KPW</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KYD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LRD</item>
        <item>LSL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MMK</item>
        <item>MNT</item>
        <item>MOP</item>
        <item>MRU</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PGK</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SBD</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SHP</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>SSP</item>
        <item>STD</item>
        <item>STN</item>
        <item>SVC</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>TOP</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>USD</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VES</item>
        <item>VND</item>
        <item>VUV</item>
        <item>WST</item>
        <item>XAF</item>
        <item>XAG</item>
        <item>XAU</item>
        <item>XCD</item>
        <item>XDR</item>
        <item>XOF</item>
        <item>XPD</item>
        <item>XPF</item>
        <item>XPT</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMW</item>
        <item>ZWL</item>

    </string-array>-->
</resources>