<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_amount"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="@dimen/text_20sp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:hint="@string/enter_amount"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_amount" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="@dimen/margin_0dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_spinner"
        app:layout_constraintEnd_toStartOf="@+id/card_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10dp">

            <TextView
                android:textColor="@color/teal_700"
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/sample_conversion"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin_20dp"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="@+id/card_spinner"
        app:layout_constraintTop_toBottomOf="@+id/tl_amount" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_spinner"
        android:layout_width="@dimen/width_150dp"
        android:layout_height="@dimen/margin_0dp"
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spinner_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/currency_codes"
                android:padding="@dimen/margin_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/text_11sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_spinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_to"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0dp"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:cardCornerRadius="@dimen/radius_25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            android:gravity="center"
            android:padding="@dimen/margin_16dp"
            android:text="@string/convert"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>